--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -4,8 +4,10 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.3.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
     <PackageReference Include="NEST" Version="7.5.1" />
+    <PackageReference Include="SendGrid" Version="9.12.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
   <ItemGroup>
